<resources>
    <string name="app_name">HealthCareApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">검색</string>
    <string name="addMedicine">나의 약 추가</string>
    <string name="favorite">약 즐겨찾기</string>
    <string name="search_input_medicine">제품명/성분명을 입력하세요.</string>
    <string name="button_medicine">의약품</string>
    <string name="description_title">제품명</string>
    <string name="description_company">업체명</string>
    <string name="description_effect">효능</string>
    <string name="description_use">사용법</string>
    <string name="description_caution">주의사항</string>
    <string name="description_sideEffect">부작용</string>
    <string name="description_interaction">사용 중 주의해야 할 약 또는 음식</string>
    <string name="description_storage">보관법</string>
    <string name="mainImage">mainImage</string>
    <string name="search_query_hint">제품명을 입력해주세요..</string>
    <string name="write">등록</string>
    <string name="add_medicine_register">어떤 약을 사용 중이신가요?</string>
    <string name="medicine_name">약 이름</string>
    <string name="medicine_name_input_hint">약의 이름을 입력해주세요.</string>
    <string name="button_next">다음</string>
    <string name="medicine_expireDate">유통기한</string>
    <string name="select_date">기간 선택</string>
    <string name="explain_medicine">어떤 약인지 설명해주세요.</string>
    <string name="explain_description">약 설명</string>
    <string name="select_medicine">사용중인 약의 종류 선택해주세요.</string>
    <string name="normal_type">약 종류</string>
    <string name="using_medicine">사용 중인 약들</string>
    <string name="delete">삭제</string>
    <string name="no_result">조회 결과가 없습니다.</string>
    <string name="favorite_description">즐겨찾기 한 약</string>
    <string name="no_favorite_data">즐겨찾기 한 약이 없습니다.</string>
    <string name="alarm">알람</string>
    <string name="expire_update">유통기한 갱신</string>
    <string name="medicine_graph">이번달 약 복용 그래프</string>
    <string name="no_eat_medicine">약을 복용한 적이 없습니다!</string>
</resources>