<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addMedicineViewModel"
            type="com.example.healthcareapp.viewmodel.AddMedicineFirstViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.addMedicine.AddMedicineFirstFragment">

        <TextView
            android:id="@+id/textView_add_first_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_medicine_register"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_add_first"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:elevation="12dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_add_first_description">

            <ImageView
                android:id="@+id/ImageView_add_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/button_background"
                android:scaleType="centerInside"
                android:src="@drawable/ic_plus" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_add_first_name_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/medicine_name"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_add_first" />

        <EditText
            android:id="@+id/editText_add_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:hint="@string/medicine_name_input_hint"
            android:inputType="text"
            android:maxLength="35"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_add_first_name_description" />

        <TextView
            android:id="@+id/textView_add_first_explain_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/explain_description"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_add_first_name" />

        <EditText
            android:id="@+id/editText_add_first_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:hint="@string/explain_medicine"
            android:inputType="text"
            android:maxLength="35"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_add_first_explain_description" />

        <TextView
            android:id="@+id/textView_add_first_expireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/medicine_expireDate"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_add_first_explain" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add_first_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_radius_enabled_true"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_add_first_expireDate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add_first_next"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/button_next"
            android:textColor="@color/button_text_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>